--- a/index.html
+++ b/index.html
@@ -1,59 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="iPrayerNotify : Titanium application - calculates the prayer time of the current or searched location based on different methods of calculation." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>iPrayerNotify by asghar07</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>iPrayerNotify</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>iPrayerNotify</h1>
+        <p>Islamic Prayer Time</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/asghar07/iPrayerNotify">View on GitHub</a>
+        <p class="view"><a href="https://github.com/asghar07/iPrayerNotify">View the Project on GitHub <small>asghar07/iPrayerNotify</small></a></p>
 
-          <h1 id="project_title">iPrayerNotify</h1>
-          <h2 id="project_tagline">Titanium application - calculates the prayer time of the current or searched location based on different methods of calculation.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/asghar07/iPrayerNotify/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/asghar07/iPrayerNotify/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Islamic Prayer Time</h3>
+        <ul>
+          <li><a href="https://github.com/asghar07/iPrayerNotify/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/asghar07/iPrayerNotify/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/asghar07/iPrayerNotify">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a id="islamic-prayer-time" class="anchor" href="#islamic-prayer-time" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Islamic Prayer Time</h3>
 
 <p>This Titanium Mobile application tested on iPhone is available in itunes store, is used to check the islamic prayer timing for a particular location. The source code is made available as open source.</p>
 
-<h3>Authors and Contributors</h3>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Developed by Mir Mohammed - <a href="https://github.com/asghar07" class="user-mention">@asghar07</a></p>
 
-<h3>Support or Contact</h3>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Tested only on iphone. If you want to drop a line - asghar07 [at] gmail.com</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">iPrayerNotify maintained by <a href="https://github.com/asghar07">asghar07</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/asghar07">asghar07</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
